--- a/src/lib/assets/css/base.css
+++ b/src/lib/assets/css/base.css
@@ -49,7 +49,7 @@
 
 @media (min-width: 0px) and (max-width: 1023px) {
 	:root {
-		--sidebar-width: 100dvw;
+		--sidebar-width: 100%;
 		--sidebar-height: 5rem;
 		--sidebar-flex-direction: row;
 	}
