--- a/src/lib/assets/css/main.css
+++ b/src/lib/assets/css/main.css
@@ -25,9 +25,10 @@
 	font-weight: normal;
 }
 
-html, body {
+html,
+body {
 	max-width: 100vw;
-	overflow-x: hidden
+	overflow-x: hidden;
 }
 a,
 button,
@@ -38,6 +39,10 @@ input {
 
 .overflow-hidden {
 	overflow: hidden;
+}
+.section {
+	background: white;
+	border-radius: 0.75rem;
 }
 ul,
 ol,
