--- a/src/lib/assets/css/main.css
+++ b/src/lib/assets/css/main.css
@@ -23,6 +23,9 @@
 	margin: 0;
 	padding: 0;
 	font-weight: normal;
+	font-synthesis: none;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 html,
