--- a/src/lib/assets/css/main.css
+++ b/src/lib/assets/css/main.css
@@ -53,6 +53,30 @@ li {
 	list-style: none;
 }
 
+.details {
+	text-decoration: none;
+	display: flex;
+	gap: 0.75rem;
+	font-size: 0.875rem;
+	line-height: 1.5;
+	color: var(--color-grey-500);
+	align-items: center;
+	justify-content: center;
+	font-weight: 350;
+	font-style: normal;
+	* {
+		color: currentColor;
+		fill: currentColor;
+	}
+	&:hover {
+		color: var(--color-grey-900);
+		* {
+			color: currentColor;
+			fill: currentColor;
+		}
+	}
+}
+
 .loading {
 	background: var(--color-grey-300);
 	color: var(--color-grey-300) !important;
