--- a/src/lib/assets/css/main.css
+++ b/src/lib/assets/css/main.css
@@ -45,7 +45,7 @@ input {
 }
 .section {
 	background: white;
-	border-radius: 0.75rem;
+	border-radius: var(--radius-m);
 }
 ul,
 ol,
@@ -54,12 +54,12 @@ li {
 }
 
 .sidebar-action {
-	padding: 1rem;
+	padding: var(--padding-l);
 	display: flex;
 	justify-content: flex-start;
 	color: var(--color-grey-300);
 	align-items: center;
-	gap: 0.5rem;
+	gap: var(--gap-s);
 	&:hover,
 	&:focus,
 	&:active {
@@ -94,13 +94,13 @@ li {
 .details {
 	text-decoration: none;
 	display: flex;
-	gap: 0.75rem;
-	font-size: 0.875rem;
-	line-height: 1.5;
+	gap: var(--gap-m);
+	font-size: var(--font-size-s);
+	line-height: var(--line-height);
 	color: var(--color-grey-500);
 	align-items: center;
 	justify-content: center;
-	font-weight: 350;
+	font-weight: var(--font-weight-350);
 	font-style: normal;
 	* {
 		color: currentColor;
@@ -118,7 +118,7 @@ li {
 .loading {
 	background: var(--color-grey-300);
 	color: var(--color-grey-300) !important;
-	border-radius: 0.25rem;
+	border-radius: var(--radius-xs);
 	position: relative;
 	overflow: hidden;
 }
@@ -128,7 +128,7 @@ li {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
+	width: var(--full-container-width);
 	height: 100%;
 	background: linear-gradient(90deg, transparent 0%, var(--color-grey-100) 50%, transparent 100%);
 	transform: translateX(-100%);
